feat: Pagenation 적용으로 인해 변경된 메서드를 DataJpaTest 테스트에 반영